<resources>
    <string name="app_name">Job Board</string>
    <string name="job_title">Job Title</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="salary_range">Salary Range</string>
    <string name="employment_type">Employment Type</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string-array name="employment_types">
        <item>Part-Time</item>
        <item>Full-Time</item>
    </string-array>
</resources>